--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
         "symfony/http-client": "^6.4 || ^7.0",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "symfony/http-kernel": "^7.3",
+        "symfony/config": "^7.3"
     }
 }
