--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "xiphias/bladefx-api-php",
     "description": "BladeFX API Client for PHP/Symfony",
+    "type": "library",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Xiphias\\BladeFxApi\\": "src/"
@@ -13,11 +15,13 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.9",
+        "php": ">=8.0",
+        "guzzlehttp/guzzle": "^7.8 || ^7.9",
+        "psr/log": "^1.1 || ^2.0 || ^3.0",
         "symfony/http-client": "^6.4 || ^7.0",
-        "psr/log": "^3.0",
-        "symfony/http-kernel": "^7.3",
-        "symfony/config": "^7.3"
-    }
+        "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/config": "^6.4 || ^7.0"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
