--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,11 @@
         "symfony/config": "^6.4 || ^7.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "phpstan/phpstan-symfony": "^2.0"
+    },
+    "scripts": {
+        "analyse": "phpstan analyse"
+    }
 }
